crates/vize_patina/src/rules/script/define_macros_order/snapshots/vize_patina__rules__script__define_macros_order__tests__invalid_macro_after_runtime_statement.snap
---
source: crates/vize_patina/src/rules/script/define_macros_order/tests.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/define-macros-order",
        severity: Warning,
        message: "`defineProps` should be declared before other statements in `<script setup>`.",
        start: 22,
        end: 68,
        help: Some(
            "Declare the Vue compiler macros in the canonical order: `defineOptions`, `defineModel`, `defineProps`, `defineEmits`, `defineSlots`, before any other statement.",
        ),
        labels: [
            Label {
                message: "compiler macro out of order",
                start: 22,
                end: 68,
            },
        ],
        fix: None,
    },
]
